base/was-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-was
  namespace: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-was
  template:
    metadata:
      labels:
        app: petclinic-was
    spec:
      serviceAccountName: secrets-sa
      containers:
        - name: petclinic-was
          image: 946775837287.dkr.ecr.ap-northeast-2.amazonaws.com/was-repo:v1.0.0-1aba5eb
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
          volumeMounts:
            - name: secrets-db
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-db
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "petclinic-db"
