base/was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-was-service
  namespace: was
spec:
  selector:
    app: petclinic-was
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
