base/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-web-service
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: petclinic-web
  ports:
    - port: 80
      targetPort: 80
